<resources>
    <string name="app_name">PMA Mini Projekt</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Decision Maker 9000</string>
    <string name="nav_header_subtitle">Dec9000.Maker@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Welcome</string>
    <string name="menu_gallery">Coin Flip</string>
    <string name="menu_slideshow">Wheel Spin</string>
    <string name="flip_the_coin">Flip the coin!</string>
    <string name="customize">Customize</string>
    <string name="presets">Presets</string>
    <string name="coinContentDescription">An image of the coin which will be flipped</string>
    <string name="welcome">Welcome!</string>
    <string name="to_the_decision_maker_9000">To the Decision Maker 9000!</string>
    <string name="warning_pointless">Warning: Pointless</string>
    <string name="pointless_button">Pointless Button</string>
    <string name="how_would_you_like_to_make_your_decision">How would you like to make your decision?</string>
    <string name="coin_flip">Coin Flip</string>
    <string name="spin_wheel">Spin Wheel</string>
    <string name="wheel_spinner">Wheel Spinner</string>
    <string name="coin_flip2">Coin Flip</string>

    <string-array name="wheelPresets">
        <item>Preset1</item>
        <item>Preset2</item>
        <item>Preset3</item>
        <item>Preset4</item>
        <item>Preset5</item>
    </string-array>

</resources>