<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.pmaminiprojekt.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_gallery"
        android:name="com.example.pmaminiprojekt.ui.gallery.GalleryFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="com.example.pmaminiprojekt.ui.slideshow.SlideshowFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_slideshow" >
        <action
            android:id="@+id/action_nav_slideshow_to_customizeFragment"
            app:destination="@id/customizeFragment" />
        <argument
            android:name="customPresetSizeArg"
            app:argType="integer"
            android:defaultValue="3" />
    </fragment>
    <fragment
        android:id="@+id/customizeFragment"
        android:name="com.example.pmaminiprojekt.ui.slideshow.CustomizeFragment"
        android:label="fragment_customize"
        tools:layout="@layout/fragment_customize" >
        <action
            android:id="@+id/action_customizeFragment_to_nav_slideshow"
            app:destination="@id/nav_slideshow" />
        <argument
            android:name="wheelSizeArg"
            app:argType="integer"
            android:defaultValue="3" />
    </fragment>
</navigation>