<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"

    tools:context=".ui.gallery.GalleryFragment">

    <TextView
        android:id="@+id/coinFlipperTitle"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:layout_marginTop="20dp"
        android:fontFamily="sans-serif-black"
        android:gravity="center"
        android:text="Coin Flipper"
        android:textColor="@color/black"
        android:textSize="34sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/flipButton"
        android:layout_width="wrap_content"
        android:layout_height="75dp"
        android:fontFamily="sans-serif-black"
        android:gravity="center"
        android:text="@string/flip_the_coin"
        android:textAllCaps="false"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/coiniestCoin" />

    <ImageView
        android:id="@+id/coiniestCoin"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_marginBottom="50dp"
        android:contentDescription="@string/coinContentDescription"
        android:src="@drawable/coin_heads"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="ImageContrastCheck" />

    <Button
        android:id="@+id/customizebutton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/customize"
        android:textAllCaps="false"
        app:layout_constraintBottom_toTopOf="@+id/flipButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/coiniestCoin" />

</androidx.constraintlayout.widget.ConstraintLayout>